--- a/src/app/config.json
+++ b/src/app/config.json
@@ -1,4 +1,4 @@
-{
-    "apiEndpoint": "http://localhost:5050/api",
-    "isFireBase": false
-}
+//{
+//    "apiEndpoint": "http://localhost:5050/api",
+//    "isFireBase": false
+//}
